1. DSM點位新增任務 2. 新增 read.me 概述每個任務

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,16 @@
+# LOGGING
+logging.exception-conversion-word=%wEx # Conversion word used when logging exceptions.
+logging.file.name=D:/log/tools/tools.log
+logging.file.max-history=100
+logging.file.max-size=10MB
+logging.level.root=info
+logging.level.org.springframework=ERROR
+logging.level.org.hibernate=INFO
+logging.pattern.console=%d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15}:%L - %m%n
+logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss.SSS
+logging.pattern.file=%d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15}:%L - %m%n
+logging.pattern.level=%5p # Appender pattern for log level. Supported only with the default Logback setup.
+
 # 澎湖案 mySQL
 duckweed.datasource.jdbcUrl=jdbc:mysql://127.0.0.1:3306/duckweed?serverTimezone=Asia/Taipei&useSSL=false&autoReconnect=true&allowPublicKeyRetrieval=true
 duckweed.datasource.username=root
@@ -8,5 +21,13 @@ mdpf.datasource.jdbcUrl=jdbc:mysql://127.0.0.1:3306/mdpf?serverTimezone=Asia/Tai
 mdpf.datasource.username=root
 mdpf.datasource.password=ems#0043
 
+# 125.11  #encrypt = false;
+twcwm.datasource.jdbcUrl=jdbc:sqlserver://127.0.0.1:1433;databaseName=twcwm;encrypt = false;
+twcwm.datasource.username=root
+twcwm.datasource.password=ems#0043
+
 pic.path=D:/Penghu/testData/picture/
 file.target.path=D:/Penghu/testData/report/
+
+# dsm position excel
+dsm.excel.path=D:/tools/ref/DSM_sheet3.xlsx
