把所有 tasks 都簽上去

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,8 +26,55 @@ twcwm.datasource.jdbcUrl=jdbc:sqlserver://127.0.0.1:1433;databaseName=twcwm;encr
 twcwm.datasource.username=root
 twcwm.datasource.password=ems#0043
 
+# 0.52  #encrypt = false;
+twdum.datasource.jdbcUrl=jdbc:sqlserver://127.0.0.1:1433;databaseName=twdum;encrypt = false;
+twdum.datasource.username=root
+twdum.datasource.password=ems#0043
+
 pic.path=D:/Penghu/testData/picture/
 file.target.path=D:/Penghu/testData/report/
 
 # dsm position excel
-dsm.excel.path=D:/tools/ref/DSM_sheet3.xlsx
+dsm.excel.path=D:/tools/ref/4p.xlsx
+dsm.excel.page=5
+
+windows.service=MySQL
+
+# gen bcp output
+file.path=D:/aaa/data
+output.text=D:/aaa/out
+
+# 產生日結 sql，路徑不要有中文
+compuday.file.path=D:/job/123.csv
+compuday.target.path=D:/job/123.sql
+compuday.edtDate=1110101
+compuday.edtTime=60556
+
+# BctMappingAndAddressCorrespondTask
+bct.file.path=D:/tools/ref/bctAddress.xlsx
+
+###  ChangeInterfaceIdToWaterIdTask  ###
+interfaceId.waterId.pair.path=D:/tools/ref/change-interface-id/interface_id_change_xingLong.txt
+# almcase_log,almcased,mntrrel2,mtrloc,compuday,mtrread_l1,mtrread_l2
+is.setting=false
+# l3
+is.l3=true
+# 105 L3
+is.105.l3=false
+# 106 L3
+is.106.l3=false
+# 107 L3
+is.107.l3=false
+# 108 L3
+is.108.l3=false
+# 109 L3
+is.109.l3=false
+# 11001-11106 L3
+is.110.l3=false
+# mtrread_ftr_day,mtrread_ftr
+is.mtrread_ftr=false
+# others
+is.others=false
+
+compress.source.folder=C:/json
+compress.target.folder=C:/json
