- 1.2.0     - 更換 interface_id 使用 sql 抓取有這個欄位的所有表 - 1.2.1     - mango db 砍 collection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,27 +54,9 @@ compuday.edtTime=60556
 bct.file.path=D:/tools/ref/bctAddress.xlsx
 
 ###  ChangeInterfaceIdToWaterIdTask  ###
-interfaceId.waterId.pair.path=D:/tools/ref/change-interface-id/interface_id_change_xingLong.txt
-# almcase_log,almcased,mntrrel2,mtrloc,compuday,mtrread_l1,mtrread_l2
-is.setting=false
-# l3
-is.l3=true
-# 105 L3
-is.105.l3=false
-# 106 L3
-is.106.l3=false
-# 107 L3
-is.107.l3=false
-# 108 L3
-is.108.l3=false
-# 109 L3
-is.109.l3=false
-# 11001-11106 L3
-is.110.l3=false
-# mtrread_ftr_day,mtrread_ftr
-is.mtrread_ftr=false
-# others
-is.others=false
+excel.file.path=D:/tools/ref/change-interface-id/interface_id_change_xingLong.txt
 
 compress.source.folder=C:/json
 compress.target.folder=C:/json
+
+mangodb.uri=mongodb://pinkjuno:junolikespinkGloves@192.168.2.48:27017/juno?authSource=admin
