--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>tools</artifactId>
-	<version>1.0.1</version>
+	<version>1.2.1</version>
 	<name>tools</name>
 	<description>some tools for work</description>
 	<properties>
@@ -85,6 +85,12 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.12.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+			<version>3.2.1</version>
 		</dependency>
 
 	</dependencies>
