- 1.2.2     - 通訊線撈資料     - jet stream 自動重連     - 送 UDP 封包

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,8 +35,8 @@ pic.path=D:/Penghu/testData/picture/
 file.target.path=D:/Penghu/testData/report/
 
 # dsm position excel
-dsm.excel.path=D:/tools/ref/4p.xlsx
-dsm.excel.page=5
+dsm.excel.path=D:/tools/ref/6p.xlsx
+dsm.excel.page=6
 
 windows.service=MySQL
 
@@ -60,3 +60,13 @@ compress.source.folder=C:/json
 compress.target.folder=C:/json
 
 mangodb.uri=mongodb://pinkjuno:junolikespinkGloves@192.168.2.48:27017/juno?authSource=admin
+
+# get l3 from ? to ?
+communication.target.file=C:/Users/10043/Desktop/
+get.l3.from=1130301000000
+get.l3.to=1130302000000
+
+udp.send.ip=210.241.14.194
+udp.send.port=10701
+udp.send.count=3000
+udp.send.interval=0.2
