--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>tools</artifactId>
-	<version>1.2.1</version>
+	<version>1.2.2</version>
 	<name>tools</name>
 	<description>some tools for work</description>
 	<properties>
@@ -91,6 +91,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 			<version>3.2.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.nats</groupId>
+			<artifactId>jnats</artifactId>
+			<version>2.13.2</version>
 		</dependency>
 
 	</dependencies>
