- 1.2.3 做 DSM 驗收報告 匯入 FOT2 的表

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,12 @@ twdum.datasource.jdbcUrl=jdbc:sqlserver://127.0.0.1:1433;databaseName=twdum;encr
 twdum.datasource.username=root
 twdum.datasource.password=ems#0043
 
+# FOT2.0 mariaDB
+fot2.datasource.jdbcUrl=jdbc:mysql://35.194.131.90:3306/mdpf?serverTimezone=Asia/Taipei&useSSL=false&autoReconnect=true\
+  &allowPublicKeyRetrieval=true
+fot2.datasource.username=ems
+fot2.datasource.password=ems#5050207
+
 pic.path=D:/Penghu/testData/picture/
 file.target.path=D:/Penghu/testData/report/
 
@@ -70,3 +76,5 @@ udp.send.ip=210.241.14.194
 udp.send.port=10701
 udp.send.count=3000
 udp.send.interval=0.2
+
+fot2.construction.file=D:/apps/tools/ref/0708-0814.xlsx
