- 1.2.4 - 做直飲台每月驗收報告

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,8 +41,8 @@ pic.path=D:/Penghu/testData/picture/
 file.target.path=D:/Penghu/testData/report/
 
 # dsm position excel
-dsm.excel.path=D:/tools/ref/6p.xlsx
-dsm.excel.page=6
+dsm.excel.path=D:/77.xlsx
+dsm.excel.page=7
 
 windows.service=MySQL
 
@@ -78,3 +78,7 @@ udp.send.count=3000
 udp.send.interval=0.2
 
 fot2.construction.file=D:/apps/tools/ref/0708-0814.xlsx
+
+# 直飲台抓取日期
+drinking.station.start=1140101000000
+drinking.station.end=1140201000000
