- 1.2.5 - 直飲台每月驗收報告更改欄位

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -65,7 +65,7 @@ excel.file.path=D:/tools/ref/change-interface-id/interface_id_change_xingLong.tx
 compress.source.folder=C:/json
 compress.target.folder=C:/json
 
-mangodb.uri=mongodb://pinkjuno:junolikespinkGloves@192.168.2.48:27017/juno?authSource=admin
+mangodb.uri=mongodb://lilypad:ems__5050207@192.168.2.47:27017/willow-pond?authSource=admin
 
 # get l3 from ? to ?
 communication.target.file=C:/Users/10043/Desktop/
@@ -80,5 +80,5 @@ udp.send.interval=0.2
 fot2.construction.file=D:/apps/tools/ref/0708-0814.xlsx
 
 # 直飲台抓取日期
-drinking.station.start=1140101000000
-drinking.station.end=1140201000000
+drinking.station.start=1140201000000
+drinking.station.end=1140301000000
