- 1.2.6 - 直飲台報表欄位新增，改寫成 xlsx，不使用 csv，所有點位用 sheet 分開不另外產生檔案

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -80,5 +80,6 @@ udp.send.interval=0.2
 fot2.construction.file=D:/apps/tools/ref/0708-0814.xlsx
 
 # 直飲台抓取日期
+drinking.station.file.target=./drinking-station
 drinking.station.start=1140201000000
 drinking.station.end=1140301000000
